Implementation Service layer